Added css styles

--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,11 @@
 <html>
     <head>
       <title>My Webpage!</title>
+      <link rel="stylesheet" href="styles.css">
     </head>
-    <<body>
-      Hello World! Hello again! Hello Hello Hello!
+    <body>
+      <h1>Welcome to My Webpage!</h1>
+      <p>This is the first paragraph.</p>
+      <p>This is the 2nd paragraph</p>
     </body>
   </html>
